attempt 1 to fix red on iphone 6

--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,6 @@ section {
     }
 
     .notEffective {
-        box-shadow: 0px 0px 20px 10px rgba(199, 10, 10);
+        box-shadow: 0px 0px 20px 10px #c70a0a;
     }
 }
